ci: pom